fixed contact, added hero image, fixed fonts, prevented events scroll

--- a/src/partials/callback.html
+++ b/src/partials/callback.html
@@ -4,7 +4,7 @@
             <h2 class="callback__title title">
                 ЗАКАЖИТЕ
                 <span>УНИКАЛЬНЫЙ</span>
-                САЙТ В МОСКВЕ
+                <div class="callback__title-lg">САЙТ В МОСКВЕ</div>
             </h2>
             <p class="callback__descr">Понравился наш подход в работе?
                 Мы рассчитаем и предложим вам варианты работ.</p>
