--- a/src/partials/cases.html
+++ b/src/partials/cases.html
@@ -20,10 +20,10 @@
                             </div>
                             <div class="cases__tabs cases__tabs_mobile custom-select">
                                 <select>
-                                    <option value="0" class="custom-option" data-tab-trigger="1">Воронка</option>
-                                    <option value="1" class="custom-option" data-tab-trigger="1">Воронка</option>
-                                    <option value="2" class="custom-option" data-tab-trigger="2">График</option>
-                                    <option value="3" class="custom-option" data-tab-trigger="3">Цифры</option>
+                                    <option value="0" class="custom-option" data-tab-trigger-mobile="1">Воронка</option>
+                                    <option value="1" class="custom-option" data-tab-trigger-mobile="1">Воронка</option>
+                                    <option value="2" class="custom-option" data-tab-trigger-mobile="2">График</option>
+                                    <option value="3" class="custom-option" data-tab-trigger-mobile="3">Цифры</option>
                                 </select>
                             </div>
 
@@ -75,7 +75,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="2">
                                 <div class="cases__img-ex"></div>
@@ -151,7 +150,6 @@
                                         </div>
                                     </li>
                                 </ul>
-                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="3">
                                 <div class="cases__img-ex"></div>
@@ -247,20 +245,20 @@
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
                             <div class="cases__tabs cases__tabs_desktop ">
-                                <button class="cases__btn is-active" data-tab-trigger="1">Воронка</button>
-                                <button class="cases__btn" data-tab-trigger="2">График</button>
-                                <button class="cases__btn" data-tab-trigger="3">Цифры</button>
+                                <button class="cases__btn is-active" data-tab-trigger="4">Воронка</button>
+                                <button class="cases__btn" data-tab-trigger="5">График</button>
+                                <button class="cases__btn" data-tab-trigger="6">Цифры</button>
                             </div>
                             <div class="cases__tabs cases__tabs_mobile custom-select">
                                 <select>
-                                    <option value="0" class="custom-option" data-tab-trigger="1">Воронка</option>
-                                    <option value="1" class="custom-option" data-tab-trigger="1">Воронка</option>
-                                    <option value="2" class="custom-option" data-tab-trigger="2">График</option>
-                                    <option value="3" class="custom-option" data-tab-trigger="3">Цифры</option>
+                                    <option value="0" class="custom-option" data-tab-trigger-mobile="4">Воронка</option>
+                                    <option value="4" class="custom-option" data-tab-trigger-mobile="4">Воронка</option>
+                                    <option value="5" class="custom-option" data-tab-trigger-mobile="5">График</option>
+                                    <option value="6" class="custom-option" data-tab-trigger-mobile="6">Цифры</option>
                                 </select>
                             </div>
 
-                            <div class="cases__content is-open" data-tab-content="1">
+                            <div class="cases__content is-open" data-tab-content="4">
                                 <div class="cases__img-ex"></div>
                                 <div class="cases__img"></div>
                                 <ul class="cases__list cases__list_1">
@@ -308,9 +306,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
-                            <div class="cases__content" data-tab-content="2">
+                            <div class="cases__content" data-tab-content="5">
                                 <div class="cases__img-ex"></div>
                                 <div class="cases__chart"></div>
                                 <ul class="cases__list cases__list_2">
@@ -384,9 +381,8 @@
                                         </div>
                                     </li>
                                 </ul>
-                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
-                            <div class="cases__content" data-tab-content="3">
+                            <div class="cases__content" data-tab-content="6">
                                 <div class="cases__img-ex"></div>
                                 <ul class="cases__list cases__list_3">
                                     <li class="cases__item problem">
@@ -480,20 +476,20 @@
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
                             <div class="cases__tabs cases__tabs_desktop ">
-                                <button class="cases__btn is-active" data-tab-trigger="1">Воронка</button>
-                                <button class="cases__btn" data-tab-trigger="2">График</button>
-                                <button class="cases__btn" data-tab-trigger="3">Цифры</button>
+                                <button class="cases__btn is-active" data-tab-trigger="7">Воронка</button>
+                                <button class="cases__btn" data-tab-trigger="8">График</button>
+                                <button class="cases__btn" data-tab-trigger="9">Цифры</button>
                             </div>
                             <div class="cases__tabs cases__tabs_mobile custom-select">
                                 <select>
-                                    <option value="0" class="custom-option" data-tab-trigger="1">Воронка</option>
-                                    <option value="1" class="custom-option" data-tab-trigger="1">Воронка</option>
-                                    <option value="2" class="custom-option" data-tab-trigger="2">График</option>
-                                    <option value="3" class="custom-option" data-tab-trigger="3">Цифры</option>
+                                    <option value="0" class="custom-option" data-tab-trigger-mobile="7">Воронка</option>
+                                    <option value="7" class="custom-option" data-tab-trigger-mobile="7">Воронка</option>
+                                    <option value="8" class="custom-option" data-tab-trigger-mobile="8">График</option>
+                                    <option value="9" class="custom-option" data-tab-trigger-mobile="9">Цифры</option>
                                 </select>
                             </div>
 
-                            <div class="cases__content is-open" data-tab-content="1">
+                            <div class="cases__content is-open" data-tab-content="7">
                                 <div class="cases__img-ex"></div>
                                 <div class="cases__img"></div>
                                 <ul class="cases__list cases__list_1">
@@ -541,9 +537,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
-                            <div class="cases__content" data-tab-content="2">
+                            <div class="cases__content" data-tab-content="8">
                                 <div class="cases__img-ex"></div>
                                 <div class="cases__chart"></div>
                                 <ul class="cases__list cases__list_2">
@@ -617,9 +612,8 @@
                                         </div>
                                     </li>
                                 </ul>
-                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
-                            <div class="cases__content" data-tab-content="3">
+                            <div class="cases__content" data-tab-content="9">
                                 <div class="cases__img-ex"></div>
                                 <ul class="cases__list cases__list_3">
                                     <li class="cases__item problem">
