--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -24,8 +24,8 @@
                 <div class="swiper-slide">
                     <div class="hero__picture hero__picture_2">
                         <div class="hero__name">
-                            <p class="hero__person">Name</p>
-                            <p class="hero__person hero__person_post">Post</p>
+                            <p class="hero__person">Дмитрий Моханов</p>
+                            <p class="hero__person hero__person_post">Технический директор</p>
                         </div>
                     </div>
                 </div>
