--- a/src/partials/questions.html
+++ b/src/partials/questions.html
@@ -10,16 +10,25 @@
                         сайтов</button>
                 </h2>
                 <div class="accordion__panel ac-panel">
-                    <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
-                        приводит к конкретному результату,
-                        а именно:<br>
-                        Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача <br>
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
-                        Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
-                        для вашего
-                        покупателя и важный для принятия решения о покупке (заказе)
-                    </p>
+                    <ul class="accordion__list ac-text">
+                        <li class="accordion__descr">Мы не пишем общих фраз, а выполняем конкретную работу, которая
+                            приводит к конкретному результату,
+                            а именно:
+                        </li>
+                        <li class="accordion__descr">
+                            Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
+                            первоочередная задача
+                        </li>
+                        <li class="accordion__descr">
+                            Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию
+                            сайта
+                        </li>
+                        <li class="accordion__descr">
+                            Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
+                            для вашего
+                            покупателя и важный для принятия решения о покупке (заказе)
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="accordion__ac ac">
@@ -28,16 +37,25 @@
                         сайтов</button>
                 </h2>
                 <div class="accordion__panel ac-panel">
-                    <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
-                        приводит к конкретному результату,
-                        а именно:<br>
-                        Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача <br>
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
-                        Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
-                        для вашего
-                        покупателя и важный для принятия решения о покупке (заказе)
-                    </p>
+                    <ul class="accordion__list ac-text">
+                        <li class="accordion__descr">Мы не пишем общих фраз, а выполняем конкретную работу, которая
+                            приводит к конкретному результату,
+                            а именно:
+                        </li>
+                        <li class="accordion__descr">
+                            Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
+                            первоочередная задача
+                        </li>
+                        <li class="accordion__descr">
+                            Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию
+                            сайта
+                        </li>
+                        <li class="accordion__descr">
+                            Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
+                            для вашего
+                            покупателя и важный для принятия решения о покупке (заказе)
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="accordion__ac ac">
@@ -45,16 +63,25 @@
                     <button class="accordion__btn ac-trigger" type="button">Почему стоит обратиться к нам?</button>
                 </h2>
                 <div class="accordion__panel ac-panel">
-                    <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
-                        приводит к конкретному результату,
-                        а именно:<br>
-                        Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача <br>
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
-                        Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
-                        для вашего
-                        покупателя и важный для принятия решения о покупке (заказе)
-                    </p>
+                    <ul class="accordion__list ac-text">
+                        <li class="accordion__descr">Мы не пишем общих фраз, а выполняем конкретную работу, которая
+                            приводит к конкретному результату,
+                            а именно:
+                        </li>
+                        <li class="accordion__descr">
+                            Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
+                            первоочередная задача
+                        </li>
+                        <li class="accordion__descr">
+                            Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию
+                            сайта
+                        </li>
+                        <li class="accordion__descr">
+                            Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
+                            для вашего
+                            покупателя и важный для принятия решения о покупке (заказе)
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="accordion__ac ac">
@@ -63,16 +90,25 @@
                         у нас заказывают</button>
                 </h2>
                 <div class="accordion__panel ac-panel">
-                    <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
-                        приводит к конкретному результату,
-                        а именно:<br>
-                        Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача <br>
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
-                        Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
-                        для вашего
-                        покупателя и важный для принятия решения о покупке (заказе)
-                    </p>
+                    <ul class="accordion__list ac-text">
+                        <li class="accordion__descr">Мы не пишем общих фраз, а выполняем конкретную работу, которая
+                            приводит к конкретному результату,
+                            а именно:
+                        </li>
+                        <li class="accordion__descr">
+                            Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
+                            первоочередная задача
+                        </li>
+                        <li class="accordion__descr">
+                            Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию
+                            сайта
+                        </li>
+                        <li class="accordion__descr">
+                            Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
+                            для вашего
+                            покупателя и важный для принятия решения о покупке (заказе)
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="accordion__ac ac">
@@ -80,16 +116,25 @@
                     <button class="accordion__btn ac-trigger" type="button">Почему стоит обратиться к нам?</button>
                 </h2>
                 <div class="accordion__panel ac-panel">
-                    <p class="accordion__descr ac-text">Мы не пишем общих фраз, а выполняем конкретную работу, которая
-                        приводит к конкретному результату,
-                        а именно:<br>
-                        Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
-                        первоочередная задача <br>
-                        Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию сайта <br>
-                        Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
-                        для вашего
-                        покупателя и важный для принятия решения о покупке (заказе)
-                    </p>
+                    <ul class="accordion__list ac-text">
+                        <li class="accordion__descr">Мы не пишем общих фраз, а выполняем конкретную работу, которая
+                            приводит к конкретному результату,
+                            а именно:
+                        </li>
+                        <li class="accordion__descr">
+                            Создание (написание) полноценного текста, который будет интересен для покупателя — это наша
+                            первоочередная задача
+                        </li>
+                        <li class="accordion__descr">
+                            Создание форм захвата, которые будут привлекать внимание клиентов, что увеличит конверсию
+                            сайта
+                        </li>
+                        <li class="accordion__descr">
+                            Создание уникального веб-дизайна, которым мы акцентируем внимание на текст, интересный
+                            для вашего
+                            покупателя и важный для принятия решения о покупке (заказе)
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
