--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -98,7 +98,9 @@
                 // margin-top: 70px;
             }
         }
-
+        &__link {
+            margin-left: 0;
+        }
         &__list_3 {
             flex-direction: column;
 
@@ -110,19 +112,6 @@
                 min-width: 160px;
             }
         }
-
-        // &__block-img {
-        //     // display: none;
-        // }
-
-        // &__btns-block {
-        //     width: 100%;
-        //     left: 0;
-        // }
-
-        // &__block {
-        //     align-items: center;
-        // }
     }
 }
 
@@ -291,6 +280,10 @@
 }
 
 @media (max-width: 1280px) {
+    .header__phone,
+    .header__mail {
+        font-size: 16px;
+    }
     .hero {
         &__swiper {
             background-size: 340px;
@@ -838,8 +831,15 @@
         }
 
         .accordion .ac .ac-panel .ac-text {
-            font-size: 18px;
+            font-size: 16px;
             padding: 6px 26px 6px 65px;
+        }
+        .accordion__descr {
+            font-size: 16px;
+            line-height: 120%;
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
         .accordion__btn {
             padding: 12px 30px 10px 0;
@@ -857,15 +857,15 @@
     }
     
     .questions .accordion .ac.is-active > .ac-header .ac-trigger::after {
-        font-size: 24px;
-    }
-    .questions .accordion .ac .ac-panel .ac-text {
-        line-height: 140%;
+        font-size: 20px;
     }
     .callback {
         &__title {
-            font-size: 28px;
+            font-size: 24px;
             margin-bottom: 18px;
+        }
+        .callback__title-lg {
+            font-size: 32px;
         }
 
         &__descr {
@@ -893,11 +893,12 @@
         }
 
         &__block_1 {
-            padding: 70px 4px 40px;
+            padding: 70px 10px 40px 4px;
         }
 
         &__block_2 {
             padding-bottom: 40px;
+            box-shadow: -2.7115116119384766px 1.0846046209335327px 2.1692092418670654px 0px rgba(0, 0, 0, 0.25);
         }
 
         &__input {
@@ -1279,6 +1280,9 @@
             padding-top: 30px;
             padding-bottom: 30px;
         }
+        .accordion__descr {
+            font-size: 14px;
+        }
     }
 
     .questions .accordion .ac .ac-panel .ac-text {
@@ -1291,10 +1295,6 @@
     }
 
     .callback {
-        &__container {
-            grid-template-columns: repeat(1, 1fr);
-        }
-
         &__block {
             padding-top: 30px;
             padding-bottom: 30px;
@@ -1305,9 +1305,8 @@
                 font-size: 36px;
             }
         }
-
-        &__block_2 {
-            box-shadow: none;
+        .callback__title-lg {
+            font-size: 28px;
         }
     }
 
@@ -1322,8 +1321,9 @@
             text-align: center;
         }
 
-        &__mail_hover::after {
+        .footer__mail-hover::after {
             padding-left: 15px;
+            background-position: right 36px center;
         }
 
         &__block {
@@ -1379,6 +1379,19 @@
             grid-column: 1/span 4;
         }
     }
+    .callback {
+        &__container {
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+        &__block_2 {
+            box-shadow: none;
+        }
+        &__form {
+            max-width: 300px;
+        }
+
+    }
 }
 
 @media (max-width: 520px) {
@@ -1397,6 +1410,15 @@
             top: 130px;
         }
 
+    }
+    .offers {
+        &__item {
+            margin-right: 0;
+            &:nth-child(1),
+            &:nth-child(3) {
+                margin-right: 0;
+            }
+        }
     }
 }
 
@@ -1448,10 +1470,13 @@
 
         .burger {
             margin-top: 10px;
-
+            &__btn {
+                width: 36px;
+                height: 36px;
+            }
             &__list {
                 width: 100%;
-                min-height: calc(100vh - 46px);
+                min-height: calc(100vh - 57px);
                 left: 0;
                 right: 0;
                 top: 56px;
@@ -1502,8 +1527,9 @@
             margin-bottom: 14px;
         }
         &__picture {
-            width: 250px;
+            width: 100%;
             height: 180px;
+            padding-left: 0;
             margin: 10px 0 0;
         }
 
@@ -1516,6 +1542,7 @@
         &__list {
             width: 100%;
             flex-direction: column;
+            margin-bottom: 14px;
         }
 
         &__name {
@@ -1531,15 +1558,22 @@
             max-width: 100%;
             margin-bottom: 8px;
             margin-right: 0;
-            padding: 16px 16px 16px 30px;
+            padding: 18px 16px 18px 30px;
+            &:not(:last-child) {
+                margin-right: 0;
+            }
         }
 
         &__block {
+            display: grid;
             padding-top: 24px;
-            padding-bottom: 35px;
+            padding-bottom: 22px;
         }
         &__btn {
+            width: max-content;
+            grid-row-start: 5;
             padding: 22px 40px;
+            margin-bottom: 0;
         }
     }
 
@@ -1857,6 +1891,9 @@
             text-align: start;
             margin-bottom: 10px;
         }
+        &__item {
+            min-width: 100%;
+        }
 
         &__person {
             height: 180px;
@@ -1886,12 +1923,12 @@
 
     .clients {
         &__container {
-            padding-top: 30px;
-            padding-bottom: 52px;
+            padding: 30px 12px 60px;
         }
 
         &__sw .swiper-slide .clients__img {
-            max-height: 70px;
+            max-height: 60px;
+            width: auto;
         }
         &__img:hover {
             transform: scale(1)
@@ -1901,8 +1938,9 @@
     .clients__sw .clients__btns-block {
         position: absolute;
         top: 10%;
-        left: -13px;
-        width: 110%;
+        left: -12px;
+        // right: 0;
+        width: calc(100% + 24px);
         height: 48px;
     }
 
@@ -1945,6 +1983,9 @@
         &__descr {
             font-size: 0;
         }
+        &__form {
+            max-width: 100%;
+        }
 
         &__label {
             font-size: 8px;
@@ -1975,6 +2016,10 @@
                 padding: 0;
             }
         }
+        &__span::after {
+            top: 1px;
+            left: 3px;
+        }
     }
 
     .footer {
@@ -1986,11 +2031,13 @@
             grid-template-columns: repeat(2, 80px);
         }
 
-        &__phone_hover::after {
+        .footer__phone-hover::after {
+            background-image: url('./images/svg/arrow-footer.svg');
             padding-left: 0;
         }
 
-        &__mail_hover::after {
+        .footer__mail-hover::after {
+            background-image: url('./images/svg/arrow-footer.svg');
             padding-left: 15px;
         }
     }
