--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,14 +2,13 @@
     <div class="advantages__container container">
         <h2 class="advantages__title title">ПОЧЕМУ СТОИТ ОБРАТИТЬСЯ К НАМ?</h2>
         <div class="advantages__wrapper">
-            <input type="radio" class="advantages__input" name="tabs" id="tab-one" checked="checked">
-            <label for="tab-one" class="advantages__label advantages__label_one">
+            <span class="advantages__label advantages__label_one advantages__active">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="./images/sprite.svg#icon-security">
                 </svg>
                 Гарантии&nbsp;&mdash; 12&nbsp;месяцев
-            </label>
-            <div class="advantages__content">
+            </span>
+            <div class="advantages__content advantages__open">
                 <h3 class="advantages__subtitle">Гарантии&nbsp;&mdash; 12&nbsp;месяцев</h3>
                 <ul class="advantages__list">
                     <li class="advantages__descr">Работа по договору. Все официально. Предоставляем весь пакет бухгалтерских
@@ -29,13 +28,12 @@
                     </li>
                 </ul>
             </div>
-            <input type="radio" class="advantages__input" name="tabs" id="tab-two">
-            <label for="tab-two" class="advantages__label advantages__label_two">
+            <span class="advantages__label advantages__label_two">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="./images/sprite.svg#icon-pay">
                 </svg>
                 Предоплата&nbsp;&mdash; 25%
-            </label>
+            </span>
             <div class="advantages__content">
                 <h3 class="advantages__subtitle">Предоплата&nbsp;&mdash; 25%</h3>
                 <ul class="advantages__list">
@@ -56,13 +54,12 @@
                     </li>
                 </ul>
             </div>
-            <input type="radio" class="advantages__input" name="tabs" id="tab-three">
-            <label for="tab-three" class="advantages__label advantages__label_three">
+            <span class="advantages__label advantages__label_three">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="./images/sprite.svg#icon-design">
                 </svg>
                 Индивидуальный дизайн
-            </label>
+            </span>
             <div class="advantages__content">
                 <h3 class="advantages__subtitle">Индивидуальный дизайн</h3>
                 <ul class="advantages__list">
@@ -83,13 +80,12 @@
                     </li>
                 </ul>
             </div>
-            <input type="radio" class="advantages__input" name="tabs" id="tab-four">
-            <label for="tab-four" class="advantages__label advantages__label_four">
+            <span class="advantages__label advantages__label_four">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="./images/sprite.svg#icon-traning">
                 </svg>
                 Обучение работе сайта
-            </label>
+            </span>
             <div class="advantages__content">
                 <h3 class="advantages__subtitle">Обучение работе сайта</h3>
                 <ul class="advantages__list">
@@ -110,13 +106,12 @@
                     </li>
                 </ul>
             </div>
-            <input type="radio" class="advantages__input" name="tabs" id="tab-five">
-            <label for="tab-five" class="advantages__label advantages__label_five">
+            <span class="advantages__label advantages__label_five">
                 <svg class="advantages__img" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="./images/sprite.svg#icon-sertificate">
                 </svg>
                 Сертифицированные сотрудники в системе
-            </label>
+            </span>
             <div class="advantages__content">
                 <h3 class="advantages__subtitle">Сертифицированные сотрудники в системе</h3>
                 <ul class="advantages__list">
